--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <title>Gems | Nam Kim</title>
   <!-- Reference to css file -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <!-- Jquery -->
   <script src="https:code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
-  <!-- <script type="text/javascript"> -->
+
 </head>
 
 <body>
-  <div id="title" style="background: yellow">Crystals Collector!</div>
 
-   <div id="howtoplay" style="background: green">
+  <div id="title" style="background: yellow">Crystals Collector!</div>
+  <!-- Instructions -->
+  <div id="howtoplay" style="background: green">
      <p>
        * The player will be shown a random number at the start of the game.
      </p>
@@ -55,125 +57,151 @@
          do not refresh the page as a means to restart the game.
      </p>
 
-     </div>
-    <div id="score_container"
+  </div>
+
+  <!-- Score to beat, user score so far display area -->
+  <div id="score_container">
+
         <div id="scoretomatch"></div>
         <div id="totalscore"></div>
-    </div>
+
+  </div>
+
+  <!-- Win and loss counts display area -->
+  <div id="winsandlosses" style="background: pink"></div>
+
+  <!-- Contains crystal images -->
+  <div id="crystal_container"></div>
 
 
-    <div id="winsandlosses" style="background: pink"></div>
-
-    <!-- Display inline block -->
-    <div id="crystal_container">
-      <div class="crystalImage">
-
-      </div>
-
-      <!-- <div id="crystal1"></div>
-      <div id="crystal2"></div>
-      <div id="crystal3"></div>
-      <div id="crystal4"></div> -->
-
-    </div>
-    <!-- //////////////////////// -->
-
-
-
-
+    <!-- Start Script -->
     <script type="text/javascript">
 
     $(document).ready(
       function(){
 
-
+        // Initialize Variables
         var Scoretobeat;
-
         var userScore;
-
-        var crystalValues = [];
+        var crystalValues = [0,0,0,0];
         var crystalImageLinks = ["assets/images/jewel1.JPG", "assets/images/jewel2.JPG", "assets/images/jewel3.JPG", "assets/images/jewel4.JPG"]
-        var win_count;
-        var loss_count;
+        var win_count = 0;
+        var loss_count = 0;
 
-        //resets values
+        //jquery declarations for image crystals with attributes
+        var imageCrystal1 = $('<img>');
+        imageCrystal1.attr(
+            'src',
+            crystalImageLinks[0]
+        );
+        imageCrystal1.attr('alt', 'crystals');
+        imageCrystal1.addClass('crystalImage');
+        $('#crystal_container').append(imageCrystal1);
+
+
+        var imageCrystal2 = $('<img>');
+        imageCrystal2.attr(
+            'src',
+            crystalImageLinks[1]
+        );
+        imageCrystal2.attr('alt', 'crystals');
+        imageCrystal2.addClass('crystalImage');
+        $('#crystal_container').append(imageCrystal2);
+
+
+
+        var imageCrystal3 = $('<img>');
+        imageCrystal3.attr(
+            'src',
+            crystalImageLinks[2]
+        );
+        imageCrystal3.attr('alt', 'crystals');
+        imageCrystal3.addClass('crystalImage');
+        $('#crystal_container').append(imageCrystal3);
+
+
+
+        var imageCrystal4 = $('<img>');
+        imageCrystal4.attr(
+            'src',
+            crystalImageLinks[3]
+        );
+        imageCrystal4.attr('alt', 'crystals');
+        imageCrystal4.addClass('crystalImage');
+        $('#crystal_container').append(imageCrystal4);
+
+
+
+
+        //Reset function for new values
         function newGame () {
-          //assigns a random integer from [19 - 120]
-          Scoretobeat = Math.floor(Math.random() * (120-19+1)) + 19;
-          userScore = 0;
+
+            //assigns a random integer from [19 - 120]
+            Scoretobeat = Math.floor(Math.random() * (120-19+1)) + 19;
+
+            //resets user score to 0
+            userScore = 0;
+
+            //prints out current user score, win/loss counts, and score to match
+            document.querySelector("#totalscore").innerHTML = "<h2>Current score: </h2>" + userScore;
+            $("#winsandlosses").html("<h2>Wins: </h2>" + win_count + "<br>" + "<h2>Losses: </h2>" + loss_count);
+            $("#scoretomatch").html("<h2>Score to match: </h2>" + Scoretobeat);
 
 
-          for (var i = 0; i < 4; i++) {
-            //assigns a random integer from [1-12]
-            crystalValues[i] = Math.floor(Math.random() * (12-1+1)) + 1;
-          }
+            for (var i = 0; i < 4; i++) {
+              //assigns a random integer from [1-12], storing in an array for each crystal
+              crystalValues[i] = Math.floor(Math.random() * (12-1+1)) + 1;
+
+            }
+
+            //randomizes the value of each crystal
+            imageCrystal1.attr('data-num', crystalValues[0]);
+            imageCrystal2.attr('data-num', crystalValues[1]);
+            imageCrystal3.attr('data-num', crystalValues[2]);
+            imageCrystal4.attr('data-num', crystalValues[3]);
+
+
+
+
+            console.log(Scoretobeat, userScore, crystalValues);
 
         }
 
+
+        //initialize game
         newGame();
-        console.log(Scoretobeat, userScore, crystalValues);
 
 
-              var imageCrystal1 = $('<img>');
-                imageCrystal1.attr('data-num', crystalValues[0]);
-                imageCrystal1.attr(
-                    'src',
-                    crystalImageLinks[0]
-                );
-                imageCrystal1.attr('alt', 'crystals');
-                imageCrystal1.addClass('crystalImage');
-                $('#crystal_container').append(imageCrystal1);
-
-              var imageCrystal2 = $('<img>');
-                imageCrystal2.attr('data-num', crystalValues[1]);
-                imageCrystal2.attr(
-                    'src',
-                    crystalImageLinks[1]
-                );
-                imageCrystal2.attr('alt', 'crystals');
-                imageCrystal2.addClass('crystalImage');
-                $('#crystal_container').append(imageCrystal2);
-
-              var imageCrystal3 = $('<img>');
-                imageCrystal3.attr('data-num', crystalValues[2]);
-                imageCrystal3.attr(
-                    'src',
-                    crystalImageLinks[2]
-                );
-                imageCrystal3.attr('alt', 'crystals');
-                imageCrystal3.addClass('crystalImage');
-                $('#crystal_container').append(imageCrystal3);
-
-              var imageCrystal4 = $('<img>');
-                imageCrystal4.attr('data-num', crystalValues[3]);
-                imageCrystal4.attr(
-                    'src',
-                    crystalImageLinks[3]
-                );
-                imageCrystal4.attr('alt', 'crystals');
-                imageCrystal4.addClass('crystalImage');
-                $('#crystal_container').append(imageCrystal4);
 
 
+
+              // Onclick functionality
               $('.crystalImage').on(
                 'click', function() {
 
-                  userScore = userScore + parseInt($(this).data('num'));
+                  //adds score on each click
+                  userScore = userScore + parseInt($(this).attr('data-num'));
                   console.log(userScore);
-                  // document.querySelector("#totalscore").innerHTML = "<h2>Current score: </h2>" + userScore;
 
-                  if (userScore == Scoretobeat) {
-                    alert('You won');
-                    win_count++;
-                    newGame();
-                  } else if (userScore > Scoretobeat) {
-                    alert('You lost!');
-                    loss_count++;
-                    newGame();
-                  }
+
+                  //updates the current user score
+                  document.querySelector("#totalscore").innerHTML = "<h2>Current score: </h2>" + userScore;
+
+                      //conditions for new game, update win/loss counts
+                      if (userScore === Scoretobeat) {
+                        alert('You won');
+                        win_count++;
+                        newGame();
+                      } else if (userScore > Scoretobeat) {
+                        alert('You lost!');
+                        loss_count++;
+                        newGame();
+                      }
 
                 }
-              );
+              )
+
+              console.log("wins: " + win_count +"|" + "losses: " + loss_count);
 
 
 
@@ -183,10 +211,9 @@
 
 
 
+        $("#winsandlosses").html("<h2>Wins: </h2>" + win_count + "<br>" + "<h2>Losses: </h2>" + loss_count);
+        $("#scoretomatch").html("<h2>Score to match: </h2>" + Scoretobeat);
 
-
-        // $("#scoretomatch").html("<h2>Score to match: </h2>" + Scoretobeat);
-        document.querySelector("#scoretomatch").innerHTML = "<h2>Score to match: </h2>" + Scoretobeat;
 
 
 
