--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Reference to css file -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <!-- Jquery -->
-  <script src="https:code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 </head>
 
